Changed formatting issue with about section image margins on mobile. Also updated version to 1.2.0

--- a/src/styles/AboutSection.css
+++ b/src/styles/AboutSection.css
@@ -30,7 +30,7 @@
 }
 
 @media only screen and (max-width: 700px) {
-  .about-image {
+  .about-image-container {
     display: none;
   }
   .about-content {
